# shortener

./: .gitignore  app.yaml  cors_conf.py  db.sqlite3  gunicorn_service  nginx.conf  pyproject.toml  requirements.txt  template.json
.github/workflows/: main.yml
shortener/: admin.py  forms.py  ga.py  middleware.py  models.py  schemas.py  tests.py  utils.py  views.py
shortener/admins/: views.py
shortener/index/: urls.py  views.py
shortener/migrations/: 0001_initial.py  0002_alter_users_pay_plan.py  0002_users_url_count_alter_shortenedurls_prefix.py  0003_rename_created_via_shortenedurls_create_via_and_more.py  0003_users_full_name.py  0004_shortenedurls.py  0004_shortenedurls_click_statistic.py  0005_statistic_custom_params_trackingparams.py  0006_users_telegram_username.py  0007_schedules.py  0008_backofficelogs.py  0009_dailyvisitors.py  0010_jobinfo.py
shortener/scheduler/: __init__.py  cron.py  utils.py
shortener/templatetags/: custom_tags.py
shortener/urls/: apis.py  serializers.py  telegram_handler.py  urls.py  views.py
shortener/users/: apis.py
shrinkers/: asgi.py  settings.py  urls.py
templates/: admin_url_list.html  base.html  boards.html  include_test.html  login.html  register.html  statistics.html  url_create.html  url_list.html
templates/includes/: nav.html
