[tool.poetry]
name = "shrinkers"
version = "0.1.0"
description = ""
authors = ["none"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.0.4"
django_widgets = "^0.1.16"
django-seed = "^0.3.1"
django-debug-toolbar = "^3.2.4"
gunicorn = "^20.1.0"
PyMySQL = "^1.0.2"
mysqlclient = "^2.1.0"
ratelimit = "^2.2.1"
idna = "^3.3"
geoip2 = "^4.5.0"
user-agents = "^2.2.0"
django-user-agents = "^0.4.0"
django-ratelimit = "^3.0.1"
djangorestframework = "^3.13.1"
drf-yasg = "^1.20.0"
django-ninja = "^0.17.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
